verbage changes and mobile front page alignment fix

--- a/src/css/critical.css
+++ b/src/css/critical.css
@@ -314,7 +314,7 @@
     border-style: solid;
     border-color: #4d0303;
     padding: 1em;
-    margin-left: 8.3em; 
+    margin-left: 6.5em; 
     display: inline-table; 
     border-radius: 50%;
   }
